@@ -28,6 +28,7 @@ my %Cbs =
      contassign => {which=>'SigParser', args => [kwd=>'string', lhs=>'string', rhs=>'string']},
      endcell	=> {which=>'SigParser', args => [kwd=>'string']},
      endinterface=>{which=>'SigParser', args => [kwd=>'string']},
+     endmodport => {which=>'SigParser', args => [kwd=>'string']},
      endmodule	=> {which=>'SigParser', args => [kwd=>'string']},
      endpackage	=> {which=>'SigParser', args => [kwd=>'string']},
      endprogram	=> {which=>'SigParser', args => [kwd=>'string']},
@@ -36,6 +37,7 @@ my %Cbs =
      import	=> {which=>'SigParser', args => [package=>'string', id=>'string']},
      instant	=> {which=>'SigParser', args => [mod=>'string', cell=>'string', range=>'string']},
      interface	=> {which=>'SigParser', args => [kwd=>'string', name=>'string']},
+     modport    => {which=>'SigParser', args => [kwd=>'string', name=>'string']},
      module	=> {which=>'SigParser', args => [kwd=>'string', name=>'string', ignore3=>'undef', celldefine=>'bool'],},
      package	=> {which=>'SigParser', args => [kwd=>'string', name=>'string']},
      parampin	=> {which=>'SigParser', args => [name=>'string', conn=>'string', index=>'int']},
