@@ -408,6 +408,14 @@ verilog/parser_sv.v:011: VAR  'parameter' 'num_of_cli' 'interface' '' '' '' '0'
 verilog/parser_sv.v:012: VAR  'var' 'blabla' 'interface' '' 'logic' '' ''
 verilog/parser_sv.v:013: VAR  'var' 'addr' 'interface' '' 'logic [7:0]' '' ''
 verilog/parser_sv.v:013: VAR  'var' 'data' 'interface' '' 'logic [7:0]' '' ''
+verilog/parser_sv.v:014: MODPORT  'modport' 'Master'
+verilog/parser_sv.v:014: VAR  'port' 'data' 'modport' '' '' '' 'data'
+verilog/parser_sv.v:014: PORT  'data' 'modport' 'input' '' '' '1'
+verilog/parser_sv.v:014: VAR  'port' 'date_delayed' 'modport' '' '' '' 'date_delayed'
+verilog/parser_sv.v:014: PORT  'date_delayed' 'modport' 'input' '' '' '2'
+verilog/parser_sv.v:014: VAR  'port' 'addr' 'modport' '' '' '' 'addr'
+verilog/parser_sv.v:014: PORT  'addr' 'modport' 'output' '' '' '3'
+verilog/parser_sv.v:014: ENDMODPORT  'endmodport'
 verilog/parser_sv.v:015: ENDINTERFACE  'endinterface'
 verilog/parser_sv.v:017: MODULE  'module' 'test' undef '0'
 verilog/parser_sv.v:018: PORT  'whole_int' 'module' '' 'itf' '' '1'
